--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dnd-frontend",
+  "homepage": "http://coldlagerfeuer.github.io/DnDBlackCrusade/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,6 +23,7 @@
     "react-bootstrap-icons": "^1.4.0",
     "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
@@ -34,7 +36,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-bootstrap-typeahead": "^5.1.4"
+    "@types/react-bootstrap-typeahead": "^5.1.4",
+    "gh-pages": "^3.1.0"
   }
 }
